--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo-file-system": "^15.2.2",
     "expo-font": "^11.1.1",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +36,7 @@
     "@types/react": "^18.2.12",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.2",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
